--- a/package.json
+++ b/package.json
@@ -9,13 +9,27 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@react-email/components": "^1.0.7",
+    "@react-email/render": "^2.0.4",
+    "@upstash/redis": "^1.36.2",
+    "axios": "^1.13.2",
+    "bcryptjs": "^3.0.3",
+    "ioredis": "^5.9.2",
+    "jose": "^6.1.3",
+    "jsonwebtoken": "^9.0.3",
+    "mongoose": "^8.21.0",
     "next": "16.1.3",
+    "nodemailer": "^7.0.12",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "react-hot-toast": "^2.6.0",
+    "resend": "^6.9.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
+    "@types/nodemailer": "^7.0.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
